--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "axios": "0.19.2",
+    "bootstrap": "4.4.1",
+    "date-fns": "2.9.0",
+    "express": "4.17.1",
+    "path": "0.12.7",
+    "serve-static": "1.14.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
